[gd_scene load_steps=26 format=3 uid="uid://buoepdxuniwqa"]

[ext_resource type="AudioStream" uid="uid://dr8douv8elwc7" path="res://music/MainManuMusic.mp3" id="1_m4uie"]
[ext_resource type="Texture2D" uid="uid://bi3iyfftn310e" path="res://imgs/background/mainMenuBackground/frames/01.png" id="1_usb5h"]
[ext_resource type="Texture2D" uid="uid://cbubxwd8ms6jj" path="res://imgs/background/mainMenuBackground/frames/02.png" id="2_ftcoo"]
[ext_resource type="Texture2D" uid="uid://df0ek822otcet" path="res://imgs/background/mainMenuBackground/frames/03.png" id="3_tikr0"]
[ext_resource type="Texture2D" uid="uid://cxdyuywq1kb77" path="res://imgs/background/mainMenuBackground/frames/04.png" id="4_ed2f1"]
[ext_resource type="Texture2D" uid="uid://dsdctpjs1m22a" path="res://imgs/background/mainMenuBackground/frames/05.png" id="5_rgwxh"]
[ext_resource type="Texture2D" uid="uid://ctgwf08fhpxh6" path="res://imgs/background/mainMenuBackground/frames/06.png" id="6_1eco5"]
[ext_resource type="Texture2D" uid="uid://bfa5vqj0y7i4l" path="res://imgs/background/mainMenuBackground/frames/07.png" id="7_73frh"]
[ext_resource type="Texture2D" uid="uid://bfwsby24ekq74" path="res://imgs/background/mainMenuBackground/frames/08.png" id="8_xj480"]
[ext_resource type="Texture2D" uid="uid://k0najgy8011f" path="res://imgs/background/mainMenuBackground/frames/09.png" id="9_0h84l"]
[ext_resource type="Texture2D" uid="uid://muh8nt2xb7k3" path="res://imgs/background/mainMenuBackground/frames/10.png" id="10_ay246"]
[ext_resource type="Texture2D" uid="uid://bbudntc112vc6" path="res://imgs/background/mainMenuBackground/frames/11.png" id="11_0j4wx"]
[ext_resource type="Texture2D" uid="uid://d1jjl5mjyi6io" path="res://imgs/background/mainMenuBackground/frames/12.png" id="12_kk3lo"]
[ext_resource type="Texture2D" uid="uid://b0v5wl2pdvu36" path="res://imgs/background/mainMenuBackground/frames/13.png" id="13_c7akx"]
[ext_resource type="Script" path="res://scene/mainMenu/Controls.gd" id="14_54r0p"]
[ext_resource type="Texture2D" uid="uid://dcmebw0dafj7" path="res://imgs/buttons/playButtons/buttonPlayUnactive.png" id="14_cbvv7"]
[ext_resource type="Texture2D" uid="uid://dcnlpl1ac2d6u" path="res://imgs/buttons/playButtons/buttonPlayActive.png" id="15_nxamw"]
[ext_resource type="Texture2D" uid="uid://bjua1q8hwjqbv" path="res://imgs/buttons/quiteButtons/quiteButtonUnactive.png" id="17_qf30m"]
[ext_resource type="Texture2D" uid="uid://c5ap01h7odkob" path="res://imgs/buttons/quiteButtons/quiteButtonActive.png" id="18_aal5o"]
[ext_resource type="AudioStream" uid="uid://cucr5qsir3vrk" path="res://sounds/engineStartSound.mp3" id="19_5xn67"]
[ext_resource type="Texture2D" uid="uid://b1xjx41xdkyvk" path="res://imgs/gameLogoImgs/car.png" id="21_hd4ou"]
[ext_resource type="PackedScene" uid="uid://c6omje6eu138a" path="res://scene/transition/scene_trasition.tscn" id="22_0b3mj"]
[ext_resource type="Texture2D" uid="uid://ckhwblvyta0au" path="res://imgs/gameLogoImgs/logoText.png" id="23_4lsht"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bow8m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_usb5h")
}, {
"duration": 1.0,
"texture": ExtResource("2_ftcoo")
}, {
"duration": 1.0,
"texture": ExtResource("2_ftcoo")
}, {
"duration": 1.0,
"texture": ExtResource("3_tikr0")
}, {
"duration": 1.0,
"texture": ExtResource("4_ed2f1")
}, {
"duration": 1.0,
"texture": ExtResource("5_rgwxh")
}, {
"duration": 1.0,
"texture": ExtResource("6_1eco5")
}, {
"duration": 1.0,
"texture": ExtResource("7_73frh")
}, {
"duration": 1.0,
"texture": ExtResource("8_xj480")
}, {
"duration": 1.0,
"texture": ExtResource("9_0h84l")
}, {
"duration": 1.0,
"texture": ExtResource("10_ay246")
}, {
"duration": 1.0,
"texture": ExtResource("11_0j4wx")
}, {
"duration": 1.0,
"texture": ExtResource("12_kk3lo")
}, {
"duration": 1.0,
"texture": ExtResource("13_c7akx")
}],
"loop": true,
"name": &"default",
"speed": 11.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2h6gw"]
size = Vector2(250, 128)

[node name="MainMenu" type="Node2D"]

[node name="backgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_m4uie")
volume_db = -9.762
autoplay = true

[node name="animatedBackground" type="AnimatedSprite2D" parent="."]
position = Vector2(80, 120)
scale = Vector2(0.296296, 0.25)
sprite_frames = SubResource("SpriteFrames_bow8m")
autoplay = "default"
frame_progress = 0.220793

[node name="Controls" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 160.0
offset_bottom = 240.0
script = ExtResource("14_54r0p")

[node name="quiteTSB" type="TouchScreenButton" parent="Controls"]
position = Vector2(16, 152)
scale = Vector2(0.363636, 0.396226)
texture_normal = ExtResource("17_qf30m")
texture_pressed = ExtResource("18_aal5o")
shape = SubResource("RectangleShape2D_2h6gw")

[node name="playTSB" type="TouchScreenButton" parent="Controls"]
position = Vector2(72, 96)
scale = Vector2(0.363636, 0.396226)
texture_normal = ExtResource("14_cbvv7")
texture_pressed = ExtResource("15_nxamw")
shape = SubResource("RectangleShape2D_2h6gw")

[node name="engineSound" type="AudioStreamPlayer2D" parent="Controls"]
stream = ExtResource("19_5xn67")

[node name="Logo" type="Sprite2D" parent="Controls"]
texture_filter = 5
texture_repeat = 1
position = Vector2(76, 47)
scale = Vector2(0.25, 0.25)
texture = ExtResource("21_hd4ou")

[node name="SceneTrasition" parent="." instance=ExtResource("22_0b3mj")]

[node name="LogoText" type="Sprite2D" parent="."]
position = Vector2(80, 80)
scale = Vector2(0.1248, 0.172951)
texture = ExtResource("23_4lsht")

[connection signal="pressed" from="Controls/quiteTSB" to="Controls" method="_on_quite_tsb_pressed"]
[connection signal="pressed" from="Controls/playTSB" to="Controls" method="_on_play_tsb_pressed"]
[connection signal="transitioned" from="SceneTrasition" to="Controls" method="_on_scene_trasition_transitioned"]
